// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`easyocr arch: arm64 should ocr and detect from agrisano sample: snapshots/agrisano.json 1`] = `
{
  "imageSize": {
    "height": 217,
    "width": 346,
  },
  "results": [
    {
      "boxes": [
        [
          107,
          83,
        ],
        [
          239,
          83,
        ],
        [
          239,
          99,
        ],
        [
          107,
          99,
        ],
      ],
      "confident": 0.7056557248492138,
      "text": "Versicheren-Nr. 59999",
    },
    {
      "boxes": [
        [
          21,
          123,
        ],
        [
          97,
          123,
        ],
        [
          97,
          137,
        ],
        [
          21,
          137,
        ],
      ],
      "confident": 0.31866742107061735,
      "text": "HuSTERAHN",
    },
    {
      "boxes": [
        [
          21,
          145,
        ],
        [
          99,
          145,
        ],
        [
          99,
          159,
        ],
        [
          21,
          159,
        ],
      ],
      "confident": 0.29907364581395857,
      "text": "ClUDI: Sofe",
    },
    {
      "boxes": [
        [
          265,
          145,
        ],
        [
          327,
          145,
        ],
        [
          327,
          159,
        ],
        [
          265,
          159,
        ],
      ],
      "confident": 0.48400899092931066,
      "text": "24/04 2000",
    },
    {
      "boxes": [
        [
          21,
          169,
        ],
        [
          117,
          169,
        ],
        [
          117,
          183,
        ],
        [
          21,
          183,
        ],
      ],
      "confident": 0.7692070750647516,
      "text": "756.12345678,90",
    },
    {
      "boxes": [
        [
          237,
          169,
        ],
        [
          273,
          169,
        ],
        [
          273,
          183,
        ],
        [
          237,
          183,
        ],
      ],
      "confident": 0.9939613779703991,
      "text": "01560",
    },
    {
      "boxes": [
        [
          279,
          171,
        ],
        [
          327,
          171,
        ],
        [
          327,
          183,
        ],
        [
          279,
          183,
        ],
      ],
      "confident": 0.1680637987897589,
      "text": "~grisano",
    },
    {
      "boxes": [
        [
          21,
          193,
        ],
        [
          153,
          193,
        ],
        [
          153,
          207,
        ],
        [
          21,
          207,
        ],
      ],
      "confident": 0.6300583906719337,
      "text": "8075602560012345678X",
    },
    {
      "boxes": [
        [
          265,
          193,
        ],
        [
          327,
          193,
        ],
        [
          327,
          207,
        ],
        [
          265,
          207,
        ],
      ],
      "confident": 0.8933693333973086,
      "text": "31/03/2099",
    },
  ],
}
`;

exports[`easyocr arch: arm64 should ocr and detect from agrisano sample with increased batch_size: snapshots/agrisano_batch_size.json 1`] = `
{
  "imageSize": {
    "height": 217,
    "width": 346,
  },
  "results": [
    {
      "boxes": [
        [
          107,
          83,
        ],
        [
          239,
          83,
        ],
        [
          239,
          99,
        ],
        [
          107,
          99,
        ],
      ],
      "confident": 0.7126986240061545,
      "text": "Versicheren-Nr. 59999",
    },
    {
      "boxes": [
        [
          21,
          123,
        ],
        [
          97,
          123,
        ],
        [
          97,
          137,
        ],
        [
          21,
          137,
        ],
      ],
      "confident": 0.10541234742807849,
      "text": "HusterhenN",
    },
    {
      "boxes": [
        [
          21,
          145,
        ],
        [
          99,
          145,
        ],
        [
          99,
          159,
        ],
        [
          21,
          159,
        ],
      ],
      "confident": 0.2975905612860045,
      "text": "ClUDI: Sofe",
    },
    {
      "boxes": [
        [
          265,
          145,
        ],
        [
          327,
          145,
        ],
        [
          327,
          159,
        ],
        [
          265,
          159,
        ],
      ],
      "confident": 0.485425986308125,
      "text": "24/04 2000",
    },
    {
      "boxes": [
        [
          21,
          169,
        ],
        [
          117,
          169,
        ],
        [
          117,
          183,
        ],
        [
          21,
          183,
        ],
      ],
      "confident": 0.766611344670633,
      "text": "756.12345678,90",
    },
    {
      "boxes": [
        [
          237,
          169,
        ],
        [
          273,
          169,
        ],
        [
          273,
          183,
        ],
        [
          237,
          183,
        ],
      ],
      "confident": 0.9934980192318895,
      "text": "01560",
    },
    {
      "boxes": [
        [
          279,
          171,
        ],
        [
          327,
          171,
        ],
        [
          327,
          183,
        ],
        [
          279,
          183,
        ],
      ],
      "confident": 0.1618341455447273,
      "text": "Egnisano",
    },
    {
      "boxes": [
        [
          21,
          193,
        ],
        [
          153,
          193,
        ],
        [
          153,
          207,
        ],
        [
          21,
          207,
        ],
      ],
      "confident": 0.6300583906719337,
      "text": "8075602560012345678X",
    },
    {
      "boxes": [
        [
          265,
          193,
        ],
        [
          327,
          193,
        ],
        [
          327,
          207,
        ],
        [
          265,
          207,
        ],
      ],
      "confident": 0.8964936395756767,
      "text": "31/03/2099",
    },
  ],
}
`;

exports[`easyocr arch: arm64 should ocr and detect from agrisano sample with increased worker: snapshots/agrisano_worker.json 1`] = `
{
  "imageSize": {
    "height": 217,
    "width": 346,
  },
  "results": [
    {
      "boxes": [
        [
          107,
          83,
        ],
        [
          239,
          83,
        ],
        [
          239,
          99,
        ],
        [
          107,
          99,
        ],
      ],
      "confident": 0.7056557248492138,
      "text": "Versicheren-Nr. 59999",
    },
    {
      "boxes": [
        [
          21,
          123,
        ],
        [
          97,
          123,
        ],
        [
          97,
          137,
        ],
        [
          21,
          137,
        ],
      ],
      "confident": 0.31866742107061735,
      "text": "HuSTERAHN",
    },
    {
      "boxes": [
        [
          21,
          145,
        ],
        [
          99,
          145,
        ],
        [
          99,
          159,
        ],
        [
          21,
          159,
        ],
      ],
      "confident": 0.29907364581395857,
      "text": "ClUDI: Sofe",
    },
    {
      "boxes": [
        [
          265,
          145,
        ],
        [
          327,
          145,
        ],
        [
          327,
          159,
        ],
        [
          265,
          159,
        ],
      ],
      "confident": 0.48400899092931066,
      "text": "24/04 2000",
    },
    {
      "boxes": [
        [
          21,
          169,
        ],
        [
          117,
          169,
        ],
        [
          117,
          183,
        ],
        [
          21,
          183,
        ],
      ],
      "confident": 0.7692070750647516,
      "text": "756.12345678,90",
    },
    {
      "boxes": [
        [
          237,
          169,
        ],
        [
          273,
          169,
        ],
        [
          273,
          183,
        ],
        [
          237,
          183,
        ],
      ],
      "confident": 0.9939613779703991,
      "text": "01560",
    },
    {
      "boxes": [
        [
          279,
          171,
        ],
        [
          327,
          171,
        ],
        [
          327,
          183,
        ],
        [
          279,
          183,
        ],
      ],
      "confident": 0.1680637987897589,
      "text": "~grisano",
    },
    {
      "boxes": [
        [
          21,
          193,
        ],
        [
          153,
          193,
        ],
        [
          153,
          207,
        ],
        [
          21,
          207,
        ],
      ],
      "confident": 0.6300583906719337,
      "text": "8075602560012345678X",
    },
    {
      "boxes": [
        [
          265,
          193,
        ],
        [
          327,
          193,
        ],
        [
          327,
          207,
        ],
        [
          265,
          207,
        ],
      ],
      "confident": 0.8933693333973086,
      "text": "31/03/2099",
    },
  ],
}
`;

exports[`easyocr arch: arm64 should ocr and detect from helsana sample: snapshots/helsana.json 1`] = `
{
  "imageSize": {
    "height": 249,
    "width": 385,
  },
  "results": [
    {
      "boxes": [
        [
          81,
          11,
        ],
        [
          297,
          11,
        ],
        [
          297,
          25,
        ],
        [
          81,
          25,
        ],
      ],
      "confident": 0.09423634627130051,
      "text": "EUROpAISCHE KraNKENversicHERUNGSKARTE",
    },
    {
      "boxes": [
        [
          103,
          85,
        ],
        [
          277,
          85,
        ],
        [
          277,
          101,
        ],
        [
          103,
          101,
        ],
      ],
      "confident": 0.7964731757912062,
      "text": "Notfallnummer +41 58 340 16 11",
    },
    {
      "boxes": [
        [
          134,
          101,
        ],
        [
          243,
          101,
        ],
        [
          243,
          115,
        ],
        [
          134,
          115,
        ],
      ],
      "confident": 0.1426040965436187,
      "text": "Im Ir-Ausland , 7124 Sld",
    },
    {
      "boxes": [
        [
          23,
          137,
        ],
        [
          77,
          137,
        ],
        [
          77,
          151,
        ],
        [
          23,
          151,
        ],
      ],
      "confident": 0.9920581670886406,
      "text": "HUBERLI",
    },
    {
      "boxes": [
        [
          23,
          163,
        ],
        [
          73,
          163,
        ],
        [
          73,
          177,
        ],
        [
          23,
          177,
        ],
      ],
      "confident": 0.9997124661397957,
      "text": "ROBERT",
    },
    {
      "boxes": [
        [
          291,
          163,
        ],
        [
          361,
          163,
        ],
        [
          361,
          177,
        ],
        [
          291,
          177,
        ],
      ],
      "confident": 0.9999194390111527,
      "text": "26/04/1987",
    },
    {
      "boxes": [
        [
          23,
          189,
        ],
        [
          129,
          189,
        ],
        [
          129,
          203,
        ],
        [
          23,
          203,
        ],
      ],
      "confident": 0.7562296290728516,
      "text": "756.0006.4893.68",
    },
    {
      "boxes": [
        [
          267,
          189,
        ],
        [
          305,
          189,
        ],
        [
          305,
          203,
        ],
        [
          267,
          203,
        ],
      ],
      "confident": 0.9988915198853607,
      "text": "01562",
    },
    {
      "boxes": [
        [
          313,
          189,
        ],
        [
          361,
          189,
        ],
        [
          361,
          203,
        ],
        [
          313,
          203,
        ],
      ],
      "confident": 0.9980946792997533,
      "text": "Helsana",
    },
    {
      "boxes": [
        [
          25,
          213,
        ],
        [
          163,
          213,
        ],
        [
          163,
          229,
        ],
        [
          25,
          229,
        ],
      ],
      "confident": 0.9980935533045646,
      "text": "80756520220920110917",
    },
    {
      "boxes": [
        [
          293,
          213,
        ],
        [
          361,
          213,
        ],
        [
          361,
          227,
        ],
        [
          293,
          227,
        ],
      ],
      "confident": 0.9999672784434894,
      "text": "30/09/2028",
    },
  ],
}
`;

exports[`easyocr arch: arm64 should ocr and detect from helsana sample with increased batch_size : snapshots/helsana_batch_size.json 1`] = `
{
  "imageSize": {
    "height": 249,
    "width": 385,
  },
  "results": [
    {
      "boxes": [
        [
          81,
          11,
        ],
        [
          297,
          11,
        ],
        [
          297,
          25,
        ],
        [
          81,
          25,
        ],
      ],
      "confident": 0.09423634627130051,
      "text": "EUROpAISCHE KraNKENversicHERUNGSKARTE",
    },
    {
      "boxes": [
        [
          103,
          85,
        ],
        [
          277,
          85,
        ],
        [
          277,
          101,
        ],
        [
          103,
          101,
        ],
      ],
      "confident": 0.8141537583619648,
      "text": "Notfallnummer +41 58 340 16 11",
    },
    {
      "boxes": [
        [
          134,
          101,
        ],
        [
          243,
          101,
        ],
        [
          243,
          115,
        ],
        [
          134,
          115,
        ],
      ],
      "confident": 0.1437213562076676,
      "text": "Im Ir-Ausland , 7124 Sld",
    },
    {
      "boxes": [
        [
          23,
          137,
        ],
        [
          77,
          137,
        ],
        [
          77,
          151,
        ],
        [
          23,
          151,
        ],
      ],
      "confident": 0.9917046226693904,
      "text": "HUBERLI",
    },
    {
      "boxes": [
        [
          23,
          163,
        ],
        [
          73,
          163,
        ],
        [
          73,
          177,
        ],
        [
          23,
          177,
        ],
      ],
      "confident": 0.999711152045979,
      "text": "ROBERT",
    },
    {
      "boxes": [
        [
          291,
          163,
        ],
        [
          361,
          163,
        ],
        [
          361,
          177,
        ],
        [
          291,
          177,
        ],
      ],
      "confident": 0.999911295996584,
      "text": "26/04/1987",
    },
    {
      "boxes": [
        [
          23,
          189,
        ],
        [
          129,
          189,
        ],
        [
          129,
          203,
        ],
        [
          23,
          203,
        ],
      ],
      "confident": 0.7563643509036827,
      "text": "756.0006.4893.68",
    },
    {
      "boxes": [
        [
          267,
          189,
        ],
        [
          305,
          189,
        ],
        [
          305,
          203,
        ],
        [
          267,
          203,
        ],
      ],
      "confident": 0.9993258137877785,
      "text": "01562",
    },
    {
      "boxes": [
        [
          313,
          189,
        ],
        [
          361,
          189,
        ],
        [
          361,
          203,
        ],
        [
          313,
          203,
        ],
      ],
      "confident": 0.9980740755554305,
      "text": "Helsana",
    },
    {
      "boxes": [
        [
          25,
          213,
        ],
        [
          163,
          213,
        ],
        [
          163,
          229,
        ],
        [
          25,
          229,
        ],
      ],
      "confident": 0.9980598923623105,
      "text": "80756520220920110917",
    },
    {
      "boxes": [
        [
          293,
          213,
        ],
        [
          361,
          213,
        ],
        [
          361,
          227,
        ],
        [
          293,
          227,
        ],
      ],
      "confident": 0.9999649788636975,
      "text": "30/09/2028",
    },
  ],
}
`;

exports[`easyocr arch: arm64 should ocr and detect from helsana sample with increased worker: snapshots/helsana_worker.json 1`] = `
{
  "imageSize": {
    "height": 249,
    "width": 385,
  },
  "results": [
    {
      "boxes": [
        [
          81,
          11,
        ],
        [
          297,
          11,
        ],
        [
          297,
          25,
        ],
        [
          81,
          25,
        ],
      ],
      "confident": 0.09423634627130051,
      "text": "EUROpAISCHE KraNKENversicHERUNGSKARTE",
    },
    {
      "boxes": [
        [
          103,
          85,
        ],
        [
          277,
          85,
        ],
        [
          277,
          101,
        ],
        [
          103,
          101,
        ],
      ],
      "confident": 0.7964731757912062,
      "text": "Notfallnummer +41 58 340 16 11",
    },
    {
      "boxes": [
        [
          134,
          101,
        ],
        [
          243,
          101,
        ],
        [
          243,
          115,
        ],
        [
          134,
          115,
        ],
      ],
      "confident": 0.1426040965436187,
      "text": "Im Ir-Ausland , 7124 Sld",
    },
    {
      "boxes": [
        [
          23,
          137,
        ],
        [
          77,
          137,
        ],
        [
          77,
          151,
        ],
        [
          23,
          151,
        ],
      ],
      "confident": 0.9920581670886406,
      "text": "HUBERLI",
    },
    {
      "boxes": [
        [
          23,
          163,
        ],
        [
          73,
          163,
        ],
        [
          73,
          177,
        ],
        [
          23,
          177,
        ],
      ],
      "confident": 0.9997124661397957,
      "text": "ROBERT",
    },
    {
      "boxes": [
        [
          291,
          163,
        ],
        [
          361,
          163,
        ],
        [
          361,
          177,
        ],
        [
          291,
          177,
        ],
      ],
      "confident": 0.9999194390111527,
      "text": "26/04/1987",
    },
    {
      "boxes": [
        [
          23,
          189,
        ],
        [
          129,
          189,
        ],
        [
          129,
          203,
        ],
        [
          23,
          203,
        ],
      ],
      "confident": 0.7562296290728516,
      "text": "756.0006.4893.68",
    },
    {
      "boxes": [
        [
          267,
          189,
        ],
        [
          305,
          189,
        ],
        [
          305,
          203,
        ],
        [
          267,
          203,
        ],
      ],
      "confident": 0.9988915198853607,
      "text": "01562",
    },
    {
      "boxes": [
        [
          313,
          189,
        ],
        [
          361,
          189,
        ],
        [
          361,
          203,
        ],
        [
          313,
          203,
        ],
      ],
      "confident": 0.9980946792997533,
      "text": "Helsana",
    },
    {
      "boxes": [
        [
          25,
          213,
        ],
        [
          163,
          213,
        ],
        [
          163,
          229,
        ],
        [
          25,
          229,
        ],
      ],
      "confident": 0.9980935533045646,
      "text": "80756520220920110917",
    },
    {
      "boxes": [
        [
          293,
          213,
        ],
        [
          361,
          213,
        ],
        [
          361,
          227,
        ],
        [
          293,
          227,
        ],
      ],
      "confident": 0.9999672784434894,
      "text": "30/09/2028",
    },
  ],
}
`;

exports[`easyocr arch: arm64 should ocr and detect from sanitas sample: snapshots/sanitas.json 1`] = `
{
  "imageSize": {
    "height": 791,
    "width": 1274,
  },
  "results": [
    {
      "boxes": [
        [
          295,
          19,
        ],
        [
          973,
          19,
        ],
        [
          973,
          57,
        ],
        [
          295,
          57,
        ],
      ],
      "confident": 0.8725338092612931,
      "text": "EUROPÄISCHE KRANKENVERSICHERUNGSKARTE",
    },
    {
      "boxes": [
        [
          1220,
          18,
        ],
        [
          1252,
          18,
        ],
        [
          1252,
          62,
        ],
        [
          1220,
          62,
        ],
      ],
      "confident": 0.9999961853063724,
      "text": "5",
    },
    {
      "boxes": [
        [
          1222,
          140,
        ],
        [
          1252,
          140,
        ],
        [
          1252,
          176,
        ],
        [
          1222,
          176,
        ],
      ],
      "confident": 0.684214628020521,
      "text": "6",
    },
    {
      "boxes": [
        [
          296,
          268,
        ],
        [
          932,
          268,
        ],
        [
          932,
          318,
        ],
        [
          296,
          318,
        ],
      ],
      "confident": 0.7858726796222969,
      "text": "24 h Int. Medical Helpline & Assistance",
    },
    {
      "boxes": [
        [
          297,
          311,
        ],
        [
          633,
          311,
        ],
        [
          633,
          355,
        ],
        [
          297,
          355,
        ],
      ],
      "confident": 0.8775464259622476,
      "text": "+41 (0) 00 000 00 00",
    },
    {
      "boxes": [
        [
          1093,
          295,
        ],
        [
          1149,
          295,
        ],
        [
          1149,
          335,
        ],
        [
          1093,
          335,
        ],
      ],
      "confident": 0.9871931351354499,
      "text": "CH",
    },
    {
      "boxes": [
        [
          71,
          421,
        ],
        [
          153,
          421,
        ],
        [
          153,
          441,
        ],
        [
          71,
          441,
        ],
      ],
      "confident": 0.9629169728954704,
      "text": "3. Name",
    },
    {
      "boxes": [
        [
          83,
          454,
        ],
        [
          191,
          454,
        ],
        [
          191,
          495,
        ],
        [
          83,
          495,
        ],
      ],
      "confident": 0.9999893375902911,
      "text": "Bauer",
    },
    {
      "boxes": [
        [
          72,
          504,
        ],
        [
          193,
          504,
        ],
        [
          193,
          528,
        ],
        [
          72,
          528,
        ],
      ],
      "confident": 0.9507236728353398,
      "text": "4 Vornamen",
    },
    {
      "boxes": [
        [
          1030,
          504,
        ],
        [
          1194,
          504,
        ],
        [
          1194,
          528,
        ],
        [
          1030,
          528,
        ],
      ],
      "confident": 0.9978378758495364,
      "text": "5. Geburtsdatum",
    },
    {
      "boxes": [
        [
          84,
          538,
        ],
        [
          180,
          538,
        ],
        [
          180,
          576,
        ],
        [
          84,
          576,
        ],
      ],
      "confident": 0.9999797414100798,
      "text": "Fabio",
    },
    {
      "boxes": [
        [
          995,
          539,
        ],
        [
          1181,
          539,
        ],
        [
          1181,
          577,
        ],
        [
          995,
          577,
        ],
      ],
      "confident": 0.9811799484992771,
      "text": "01.02.1989",
    },
    {
      "boxes": [
        [
          72,
          587,
        ],
        [
          322,
          587,
        ],
        [
          322,
          613,
        ],
        [
          72,
          613,
        ],
      ],
      "confident": 0.8375623787775046,
      "text": "6. Persönliche Kennnumer",
    },
    {
      "boxes": [
        [
          926,
          587,
        ],
        [
          1196,
          587,
        ],
        [
          1196,
          616,
        ],
        [
          926,
          616,
        ],
      ],
      "confident": 0.8290164681589126,
      "text": "7. Kennnummer des Trägers",
    },
    {
      "boxes": [
        [
          85,
          625,
        ],
        [
          379,
          625,
        ],
        [
          379,
          663,
        ],
        [
          85,
          663,
        ],
      ],
      "confident": 0.9560582282861357,
      "text": "756.1234.5678.00",
    },
    {
      "boxes": [
        [
          919,
          625,
        ],
        [
          1029,
          625,
        ],
        [
          1029,
          663,
        ],
        [
          919,
          663,
        ],
      ],
      "confident": 0.9999974410228937,
      "text": "01509",
    },
    {
      "boxes": [
        [
          1054,
          624,
        ],
        [
          1182,
          624,
        ],
        [
          1182,
          662,
        ],
        [
          1054,
          662,
        ],
      ],
      "confident": 0.7429811797588343,
      "text": "Sanitas",
    },
    {
      "boxes": [
        [
          70,
          674,
        ],
        [
          318,
          674,
        ],
        [
          318,
          698,
        ],
        [
          70,
          698,
        ],
      ],
      "confident": 0.7536318260722963,
      "text": "8. Kennnummer der Karte",
    },
    {
      "boxes": [
        [
          1046,
          674,
        ],
        [
          1194,
          674,
        ],
        [
          1194,
          698,
        ],
        [
          1046,
          698,
        ],
      ],
      "confident": 0.8195433475072461,
      "text": "9. Ablaufdatum",
    },
    {
      "boxes": [
        [
          81,
          706,
        ],
        [
          491,
          706,
        ],
        [
          491,
          747,
        ],
        [
          81,
          747,
        ],
      ],
      "confident": 0.9091620313810417,
      "text": "80756015090123456789",
    },
    {
      "boxes": [
        [
          997,
          707,
        ],
        [
          1183,
          707,
        ],
        [
          1183,
          747,
        ],
        [
          997,
          747,
        ],
      ],
      "confident": 0.978611083273469,
      "text": "30.06.2Oxx",
    },
  ],
}
`;

exports[`easyocr arch: arm64 should ocr and detect from sanitas sample with increased batch_size: snapshots/sanitas_batch_size.json 1`] = `
{
  "imageSize": {
    "height": 791,
    "width": 1274,
  },
  "results": [
    {
      "boxes": [
        [
          1220,
          18,
        ],
        [
          1252,
          18,
        ],
        [
          1252,
          62,
        ],
        [
          1220,
          62,
        ],
      ],
      "confident": 0.9999961853063724,
      "text": "5",
    },
    {
      "boxes": [
        [
          295,
          19,
        ],
        [
          973,
          19,
        ],
        [
          973,
          57,
        ],
        [
          295,
          57,
        ],
      ],
      "confident": 0.8725341407055961,
      "text": "EUROPÄISCHE KRANKENVERSICHERUNGSKARTE",
    },
    {
      "boxes": [
        [
          1222,
          140,
        ],
        [
          1252,
          140,
        ],
        [
          1252,
          176,
        ],
        [
          1222,
          176,
        ],
      ],
      "confident": 0.5399148278238493,
      "text": "6",
    },
    {
      "boxes": [
        [
          296,
          268,
        ],
        [
          932,
          268,
        ],
        [
          932,
          318,
        ],
        [
          296,
          318,
        ],
      ],
      "confident": 0.7927068481205352,
      "text": "24 h Int. Medical Helpline & Assistance",
    },
    {
      "boxes": [
        [
          1093,
          295,
        ],
        [
          1149,
          295,
        ],
        [
          1149,
          335,
        ],
        [
          1093,
          335,
        ],
      ],
      "confident": 0.9860101200948775,
      "text": "CH",
    },
    {
      "boxes": [
        [
          297,
          311,
        ],
        [
          633,
          311,
        ],
        [
          633,
          355,
        ],
        [
          297,
          355,
        ],
      ],
      "confident": 0.8770480383169456,
      "text": "+41 (0) 00 000 00 00",
    },
    {
      "boxes": [
        [
          71,
          421,
        ],
        [
          153,
          421,
        ],
        [
          153,
          441,
        ],
        [
          71,
          441,
        ],
      ],
      "confident": 0.962284934085254,
      "text": "3. Name",
    },
    {
      "boxes": [
        [
          83,
          454,
        ],
        [
          191,
          454,
        ],
        [
          191,
          495,
        ],
        [
          83,
          495,
        ],
      ],
      "confident": 0.9999891776540434,
      "text": "Bauer",
    },
    {
      "boxes": [
        [
          72,
          504,
        ],
        [
          193,
          504,
        ],
        [
          193,
          528,
        ],
        [
          72,
          528,
        ],
      ],
      "confident": 0.9510197975656839,
      "text": "4 Vornamen",
    },
    {
      "boxes": [
        [
          1030,
          504,
        ],
        [
          1194,
          504,
        ],
        [
          1194,
          528,
        ],
        [
          1030,
          528,
        ],
      ],
      "confident": 0.9978328485655878,
      "text": "5. Geburtsdatum",
    },
    {
      "boxes": [
        [
          84,
          538,
        ],
        [
          180,
          538,
        ],
        [
          180,
          576,
        ],
        [
          84,
          576,
        ],
      ],
      "confident": 0.999980007970788,
      "text": "Fabio",
    },
    {
      "boxes": [
        [
          995,
          539,
        ],
        [
          1181,
          539,
        ],
        [
          1181,
          577,
        ],
        [
          995,
          577,
        ],
      ],
      "confident": 0.988424593042814,
      "text": "01.02.1989",
    },
    {
      "boxes": [
        [
          72,
          587,
        ],
        [
          322,
          587,
        ],
        [
          322,
          613,
        ],
        [
          72,
          613,
        ],
      ],
      "confident": 0.8375997306833707,
      "text": "6. Persönliche Kennnumer",
    },
    {
      "boxes": [
        [
          926,
          587,
        ],
        [
          1196,
          587,
        ],
        [
          1196,
          616,
        ],
        [
          926,
          616,
        ],
      ],
      "confident": 0.8281851930886817,
      "text": "7. Kennnummer des Trägers",
    },
    {
      "boxes": [
        [
          1054,
          624,
        ],
        [
          1182,
          624,
        ],
        [
          1182,
          662,
        ],
        [
          1054,
          662,
        ],
      ],
      "confident": 0.7257048888724278,
      "text": "Sanitas",
    },
    {
      "boxes": [
        [
          85,
          625,
        ],
        [
          379,
          625,
        ],
        [
          379,
          663,
        ],
        [
          85,
          663,
        ],
      ],
      "confident": 0.9532370384103678,
      "text": "756.1234.5678.00",
    },
    {
      "boxes": [
        [
          919,
          625,
        ],
        [
          1029,
          625,
        ],
        [
          1029,
          663,
        ],
        [
          919,
          663,
        ],
      ],
      "confident": 0.9999969079025659,
      "text": "01509",
    },
    {
      "boxes": [
        [
          70,
          674,
        ],
        [
          318,
          674,
        ],
        [
          318,
          698,
        ],
        [
          70,
          698,
        ],
      ],
      "confident": 0.7534741889123964,
      "text": "8. Kennnummer der Karte",
    },
    {
      "boxes": [
        [
          1046,
          674,
        ],
        [
          1194,
          674,
        ],
        [
          1194,
          698,
        ],
        [
          1046,
          698,
        ],
      ],
      "confident": 0.8185314773400479,
      "text": "9. Ablaufdatum",
    },
    {
      "boxes": [
        [
          81,
          706,
        ],
        [
          491,
          706,
        ],
        [
          491,
          747,
        ],
        [
          81,
          747,
        ],
      ],
      "confident": 0.8879258666972866,
      "text": "80756015090123456789",
    },
    {
      "boxes": [
        [
          997,
          707,
        ],
        [
          1183,
          707,
        ],
        [
          1183,
          747,
        ],
        [
          997,
          747,
        ],
      ],
      "confident": 0.9766210115372073,
      "text": "30.06.2Oxx",
    },
  ],
}
`;

exports[`easyocr arch: arm64 should ocr and detect from sanitas sample with increased worker: snapshots/sanitas_worker.json 1`] = `
{
  "imageSize": {
    "height": 791,
    "width": 1274,
  },
  "results": [
    {
      "boxes": [
        [
          295,
          19,
        ],
        [
          973,
          19,
        ],
        [
          973,
          57,
        ],
        [
          295,
          57,
        ],
      ],
      "confident": 0.8725338092612931,
      "text": "EUROPÄISCHE KRANKENVERSICHERUNGSKARTE",
    },
    {
      "boxes": [
        [
          1220,
          18,
        ],
        [
          1252,
          18,
        ],
        [
          1252,
          62,
        ],
        [
          1220,
          62,
        ],
      ],
      "confident": 0.9999961853063724,
      "text": "5",
    },
    {
      "boxes": [
        [
          1222,
          140,
        ],
        [
          1252,
          140,
        ],
        [
          1252,
          176,
        ],
        [
          1222,
          176,
        ],
      ],
      "confident": 0.684214628020521,
      "text": "6",
    },
    {
      "boxes": [
        [
          296,
          268,
        ],
        [
          932,
          268,
        ],
        [
          932,
          318,
        ],
        [
          296,
          318,
        ],
      ],
      "confident": 0.7858726796222969,
      "text": "24 h Int. Medical Helpline & Assistance",
    },
    {
      "boxes": [
        [
          297,
          311,
        ],
        [
          633,
          311,
        ],
        [
          633,
          355,
        ],
        [
          297,
          355,
        ],
      ],
      "confident": 0.8775464259622476,
      "text": "+41 (0) 00 000 00 00",
    },
    {
      "boxes": [
        [
          1093,
          295,
        ],
        [
          1149,
          295,
        ],
        [
          1149,
          335,
        ],
        [
          1093,
          335,
        ],
      ],
      "confident": 0.9871931351354499,
      "text": "CH",
    },
    {
      "boxes": [
        [
          71,
          421,
        ],
        [
          153,
          421,
        ],
        [
          153,
          441,
        ],
        [
          71,
          441,
        ],
      ],
      "confident": 0.9629169728954704,
      "text": "3. Name",
    },
    {
      "boxes": [
        [
          83,
          454,
        ],
        [
          191,
          454,
        ],
        [
          191,
          495,
        ],
        [
          83,
          495,
        ],
      ],
      "confident": 0.9999893375902911,
      "text": "Bauer",
    },
    {
      "boxes": [
        [
          72,
          504,
        ],
        [
          193,
          504,
        ],
        [
          193,
          528,
        ],
        [
          72,
          528,
        ],
      ],
      "confident": 0.9507236728353398,
      "text": "4 Vornamen",
    },
    {
      "boxes": [
        [
          1030,
          504,
        ],
        [
          1194,
          504,
        ],
        [
          1194,
          528,
        ],
        [
          1030,
          528,
        ],
      ],
      "confident": 0.9978378758495364,
      "text": "5. Geburtsdatum",
    },
    {
      "boxes": [
        [
          84,
          538,
        ],
        [
          180,
          538,
        ],
        [
          180,
          576,
        ],
        [
          84,
          576,
        ],
      ],
      "confident": 0.9999797414100798,
      "text": "Fabio",
    },
    {
      "boxes": [
        [
          995,
          539,
        ],
        [
          1181,
          539,
        ],
        [
          1181,
          577,
        ],
        [
          995,
          577,
        ],
      ],
      "confident": 0.9811799484992771,
      "text": "01.02.1989",
    },
    {
      "boxes": [
        [
          72,
          587,
        ],
        [
          322,
          587,
        ],
        [
          322,
          613,
        ],
        [
          72,
          613,
        ],
      ],
      "confident": 0.8375623787775046,
      "text": "6. Persönliche Kennnumer",
    },
    {
      "boxes": [
        [
          926,
          587,
        ],
        [
          1196,
          587,
        ],
        [
          1196,
          616,
        ],
        [
          926,
          616,
        ],
      ],
      "confident": 0.8290164681589126,
      "text": "7. Kennnummer des Trägers",
    },
    {
      "boxes": [
        [
          85,
          625,
        ],
        [
          379,
          625,
        ],
        [
          379,
          663,
        ],
        [
          85,
          663,
        ],
      ],
      "confident": 0.9560582282861357,
      "text": "756.1234.5678.00",
    },
    {
      "boxes": [
        [
          919,
          625,
        ],
        [
          1029,
          625,
        ],
        [
          1029,
          663,
        ],
        [
          919,
          663,
        ],
      ],
      "confident": 0.9999974410228937,
      "text": "01509",
    },
    {
      "boxes": [
        [
          1054,
          624,
        ],
        [
          1182,
          624,
        ],
        [
          1182,
          662,
        ],
        [
          1054,
          662,
        ],
      ],
      "confident": 0.7429811797588343,
      "text": "Sanitas",
    },
    {
      "boxes": [
        [
          70,
          674,
        ],
        [
          318,
          674,
        ],
        [
          318,
          698,
        ],
        [
          70,
          698,
        ],
      ],
      "confident": 0.7536318260722963,
      "text": "8. Kennnummer der Karte",
    },
    {
      "boxes": [
        [
          1046,
          674,
        ],
        [
          1194,
          674,
        ],
        [
          1194,
          698,
        ],
        [
          1046,
          698,
        ],
      ],
      "confident": 0.8195433475072461,
      "text": "9. Ablaufdatum",
    },
    {
      "boxes": [
        [
          81,
          706,
        ],
        [
          491,
          706,
        ],
        [
          491,
          747,
        ],
        [
          81,
          747,
        ],
      ],
      "confident": 0.9091620313810417,
      "text": "80756015090123456789",
    },
    {
      "boxes": [
        [
          997,
          707,
        ],
        [
          1183,
          707,
        ],
        [
          1183,
          747,
        ],
        [
          997,
          747,
        ],
      ],
      "confident": 0.978611083273469,
      "text": "30.06.2Oxx",
    },
  ],
}
`;

exports[`easyocr arch: arm64 should ocr and detect from sumiswalder sample: snapshots/sumiswalder.json 1`] = `
{
  "imageSize": {
    "height": 510,
    "width": 800,
  },
  "results": [
    {
      "boxes": [
        [
          154,
          12,
        ],
        [
          641,
          12,
        ],
        [
          641,
          40,
        ],
        [
          154,
          40,
        ],
      ],
      "confident": 0.9814806080981325,
      "text": "EUROPÄISCHE KRANKENVERSICHERUNGSKARTE",
    },
    {
      "boxes": [
        [
          170,
          170,
        ],
        [
          424,
          170,
        ],
        [
          424,
          198,
        ],
        [
          170,
          198,
        ],
      ],
      "confident": 0.8418808978392693,
      "text": "Versichertennummer:",
    },
    {
      "boxes": [
        [
          436,
          168,
        ],
        [
          502,
          168,
        ],
        [
          502,
          198,
        ],
        [
          436,
          198,
        ],
      ],
      "confident": 0.9999991655349731,
      "text": "1234",
    },
    {
      "boxes": [
        [
          43,
          263,
        ],
        [
          95,
          263,
        ],
        [
          95,
          283,
        ],
        [
          43,
          283,
        ],
      ],
      "confident": 0.9987776875495911,
      "text": "Name",
    },
    {
      "boxes": [
        [
          44,
          288,
        ],
        [
          108,
          288,
        ],
        [
          108,
          316,
        ],
        [
          44,
          316,
        ],
      ],
      "confident": 0.8730613589286804,
      "text": "MAX",
    },
    {
      "boxes": [
        [
          41,
          317,
        ],
        [
          132,
          317,
        ],
        [
          132,
          343,
        ],
        [
          41,
          343,
        ],
      ],
      "confident": 0.9987378905655304,
      "text": "Vornamen",
    },
    {
      "boxes": [
        [
          633,
          321,
        ],
        [
          647,
          321,
        ],
        [
          647,
          337,
        ],
        [
          633,
          337,
        ],
      ],
      "confident": 0.9993899799155912,
      "text": "5",
    },
    {
      "boxes": [
        [
          655,
          317,
        ],
        [
          773,
          317,
        ],
        [
          773,
          337,
        ],
        [
          655,
          337,
        ],
      ],
      "confident": 0.9997994965585233,
      "text": "Geburtsdatum",
    },
    {
      "boxes": [
        [
          44,
          344,
        ],
        [
          160,
          344,
        ],
        [
          160,
          374,
        ],
        [
          44,
          374,
        ],
      ],
      "confident": 0.9999701670359346,
      "text": "MUSTER",
    },
    {
      "boxes": [
        [
          628,
          342,
        ],
        [
          770,
          342,
        ],
        [
          770,
          374,
        ],
        [
          628,
          374,
        ],
      ],
      "confident": 0.9837393397449191,
      "text": "01/01/2010",
    },
    {
      "boxes": [
        [
          25,
          381,
        ],
        [
          39,
          381,
        ],
        [
          39,
          393,
        ],
        [
          25,
          393,
        ],
      ],
      "confident": 0.3348798264473036,
      "text": "0 .",
    },
    {
      "boxes": [
        [
          42,
          374,
        ],
        [
          256,
          374,
        ],
        [
          256,
          398,
        ],
        [
          42,
          398,
        ],
      ],
      "confident": 0.8712231419178825,
      "text": "Persönliche Kennnummer",
    },
    {
      "boxes": [
        [
          561,
          375,
        ],
        [
          775,
          375,
        ],
        [
          775,
          395,
        ],
        [
          561,
          395,
        ],
      ],
      "confident": 0.9278303380572647,
      "text": "Kennnummer des Trägers",
    },
    {
      "boxes": [
        [
          42,
          400,
        ],
        [
          264,
          400,
        ],
        [
          264,
          430,
        ],
        [
          42,
          430,
        ],
      ],
      "confident": 0.8139588074960924,
      "text": "756.6290.1234.56",
    },
    {
      "boxes": [
        [
          530,
          402,
        ],
        [
          596,
          402,
        ],
        [
          596,
          430,
        ],
        [
          530,
          430,
        ],
      ],
      "confident": 0.9999883770942688,
      "text": "0194",
    },
    {
      "boxes": [
        [
          613,
          402,
        ],
        [
          767,
          402,
        ],
        [
          767,
          430,
        ],
        [
          613,
          430,
        ],
      ],
      "confident": 0.971768358732933,
      "text": "Sumiswalder",
    },
    {
      "boxes": [
        [
          22,
          430,
        ],
        [
          240,
          430,
        ],
        [
          240,
          454,
        ],
        [
          22,
          454,
        ],
      ],
      "confident": 0.37614930183102746,
      "text": "8. Kennnummer_der Karte",
    },
    {
      "boxes": [
        [
          669,
          433,
        ],
        [
          773,
          433,
        ],
        [
          773,
          449,
        ],
        [
          669,
          449,
        ],
      ],
      "confident": 0.7852095747970923,
      "text": "Ablautdatum",
    },
    {
      "boxes": [
        [
          42,
          454,
        ],
        [
          342,
          454,
        ],
        [
          342,
          486,
        ],
        [
          42,
          486,
        ],
      ],
      "confident": 0.9999980007969674,
      "text": "12345601940001234567",
    },
    {
      "boxes": [
        [
          628,
          458,
        ],
        [
          768,
          458,
        ],
        [
          768,
          488,
        ],
        [
          628,
          488,
        ],
      ],
      "confident": 0.9999925736183721,
      "text": "31/12/2021",
    },
  ],
}
`;

exports[`easyocr arch: arm64 should ocr and detect from sumiswalder sample with increased batch_size: snapshots/sumiswalder_batch_size.json 1`] = `
{
  "imageSize": {
    "height": 510,
    "width": 800,
  },
  "results": [
    {
      "boxes": [
        [
          154,
          12,
        ],
        [
          641,
          12,
        ],
        [
          641,
          40,
        ],
        [
          154,
          40,
        ],
      ],
      "confident": 0.9814806279594851,
      "text": "EUROPÄISCHE KRANKENVERSICHERUNGSKARTE",
    },
    {
      "boxes": [
        [
          436,
          168,
        ],
        [
          502,
          168,
        ],
        [
          502,
          198,
        ],
        [
          436,
          198,
        ],
      ],
      "confident": 0.9999991655349731,
      "text": "1234",
    },
    {
      "boxes": [
        [
          170,
          170,
        ],
        [
          424,
          170,
        ],
        [
          424,
          198,
        ],
        [
          170,
          198,
        ],
      ],
      "confident": 0.8422047713868421,
      "text": "Versichertennummer:",
    },
    {
      "boxes": [
        [
          43,
          263,
        ],
        [
          95,
          263,
        ],
        [
          95,
          283,
        ],
        [
          43,
          283,
        ],
      ],
      "confident": 0.9987825751304626,
      "text": "Name",
    },
    {
      "boxes": [
        [
          44,
          288,
        ],
        [
          108,
          288,
        ],
        [
          108,
          316,
        ],
        [
          44,
          316,
        ],
      ],
      "confident": 0.862525999546051,
      "text": "MAX",
    },
    {
      "boxes": [
        [
          41,
          317,
        ],
        [
          132,
          317,
        ],
        [
          132,
          343,
        ],
        [
          41,
          343,
        ],
      ],
      "confident": 0.9988586029216125,
      "text": "Vornamen",
    },
    {
      "boxes": [
        [
          655,
          317,
        ],
        [
          773,
          317,
        ],
        [
          773,
          337,
        ],
        [
          655,
          337,
        ],
      ],
      "confident": 0.9997924064713333,
      "text": "Geburtsdatum",
    },
    {
      "boxes": [
        [
          633,
          321,
        ],
        [
          647,
          321,
        ],
        [
          647,
          337,
        ],
        [
          633,
          337,
        ],
      ],
      "confident": 0.999408809326269,
      "text": "5",
    },
    {
      "boxes": [
        [
          628,
          342,
        ],
        [
          770,
          342,
        ],
        [
          770,
          374,
        ],
        [
          628,
          374,
        ],
      ],
      "confident": 0.9824026331136119,
      "text": "01/01/2010",
    },
    {
      "boxes": [
        [
          44,
          344,
        ],
        [
          160,
          344,
        ],
        [
          160,
          374,
        ],
        [
          44,
          374,
        ],
      ],
      "confident": 0.9999692423568539,
      "text": "MUSTER",
    },
    {
      "boxes": [
        [
          42,
          374,
        ],
        [
          256,
          374,
        ],
        [
          256,
          398,
        ],
        [
          42,
          398,
        ],
      ],
      "confident": 0.8817793213537809,
      "text": "Persönliche Kennnummer",
    },
    {
      "boxes": [
        [
          561,
          375,
        ],
        [
          775,
          375,
        ],
        [
          775,
          395,
        ],
        [
          561,
          395,
        ],
      ],
      "confident": 0.9279122175236819,
      "text": "Kennnummer des Trägers",
    },
    {
      "boxes": [
        [
          25,
          381,
        ],
        [
          39,
          381,
        ],
        [
          39,
          393,
        ],
        [
          25,
          393,
        ],
      ],
      "confident": 0.3572455098106291,
      "text": "0 .",
    },
    {
      "boxes": [
        [
          42,
          400,
        ],
        [
          264,
          400,
        ],
        [
          264,
          430,
        ],
        [
          42,
          430,
        ],
      ],
      "confident": 0.813680713622548,
      "text": "756.6290.1234.56",
    },
    {
      "boxes": [
        [
          530,
          402,
        ],
        [
          596,
          402,
        ],
        [
          596,
          430,
        ],
        [
          530,
          430,
        ],
      ],
      "confident": 0.9999883770942688,
      "text": "0194",
    },
    {
      "boxes": [
        [
          613,
          402,
        ],
        [
          767,
          402,
        ],
        [
          767,
          430,
        ],
        [
          613,
          430,
        ],
      ],
      "confident": 0.9714560166871944,
      "text": "Sumiswalder",
    },
    {
      "boxes": [
        [
          22,
          430,
        ],
        [
          240,
          430,
        ],
        [
          240,
          454,
        ],
        [
          22,
          454,
        ],
      ],
      "confident": 0.376224140043689,
      "text": "8. Kennnummer_der Karte",
    },
    {
      "boxes": [
        [
          669,
          433,
        ],
        [
          773,
          433,
        ],
        [
          773,
          449,
        ],
        [
          669,
          449,
        ],
      ],
      "confident": 0.7850843132828087,
      "text": "Ablautdatum",
    },
    {
      "boxes": [
        [
          42,
          454,
        ],
        [
          342,
          454,
        ],
        [
          342,
          486,
        ],
        [
          42,
          486,
        ],
      ],
      "confident": 0.9999980007969674,
      "text": "12345601940001234567",
    },
    {
      "boxes": [
        [
          628,
          458,
        ],
        [
          768,
          458,
        ],
        [
          768,
          488,
        ],
        [
          628,
          488,
        ],
      ],
      "confident": 0.999992158946372,
      "text": "31/12/2021",
    },
  ],
}
`;

exports[`easyocr arch: arm64 should ocr and detect from sumiswalder sample with increased worker: snapshots/sumiswalder_worker.json 1`] = `
{
  "imageSize": {
    "height": 510,
    "width": 800,
  },
  "results": [
    {
      "boxes": [
        [
          154,
          12,
        ],
        [
          641,
          12,
        ],
        [
          641,
          40,
        ],
        [
          154,
          40,
        ],
      ],
      "confident": 0.9814806080981325,
      "text": "EUROPÄISCHE KRANKENVERSICHERUNGSKARTE",
    },
    {
      "boxes": [
        [
          170,
          170,
        ],
        [
          424,
          170,
        ],
        [
          424,
          198,
        ],
        [
          170,
          198,
        ],
      ],
      "confident": 0.8418808978392693,
      "text": "Versichertennummer:",
    },
    {
      "boxes": [
        [
          436,
          168,
        ],
        [
          502,
          168,
        ],
        [
          502,
          198,
        ],
        [
          436,
          198,
        ],
      ],
      "confident": 0.9999991655349731,
      "text": "1234",
    },
    {
      "boxes": [
        [
          43,
          263,
        ],
        [
          95,
          263,
        ],
        [
          95,
          283,
        ],
        [
          43,
          283,
        ],
      ],
      "confident": 0.9987776875495911,
      "text": "Name",
    },
    {
      "boxes": [
        [
          44,
          288,
        ],
        [
          108,
          288,
        ],
        [
          108,
          316,
        ],
        [
          44,
          316,
        ],
      ],
      "confident": 0.8730613589286804,
      "text": "MAX",
    },
    {
      "boxes": [
        [
          41,
          317,
        ],
        [
          132,
          317,
        ],
        [
          132,
          343,
        ],
        [
          41,
          343,
        ],
      ],
      "confident": 0.9987378905655304,
      "text": "Vornamen",
    },
    {
      "boxes": [
        [
          633,
          321,
        ],
        [
          647,
          321,
        ],
        [
          647,
          337,
        ],
        [
          633,
          337,
        ],
      ],
      "confident": 0.9993899799155912,
      "text": "5",
    },
    {
      "boxes": [
        [
          655,
          317,
        ],
        [
          773,
          317,
        ],
        [
          773,
          337,
        ],
        [
          655,
          337,
        ],
      ],
      "confident": 0.9997994965585233,
      "text": "Geburtsdatum",
    },
    {
      "boxes": [
        [
          44,
          344,
        ],
        [
          160,
          344,
        ],
        [
          160,
          374,
        ],
        [
          44,
          374,
        ],
      ],
      "confident": 0.9999701670359346,
      "text": "MUSTER",
    },
    {
      "boxes": [
        [
          628,
          342,
        ],
        [
          770,
          342,
        ],
        [
          770,
          374,
        ],
        [
          628,
          374,
        ],
      ],
      "confident": 0.9837393397449191,
      "text": "01/01/2010",
    },
    {
      "boxes": [
        [
          25,
          381,
        ],
        [
          39,
          381,
        ],
        [
          39,
          393,
        ],
        [
          25,
          393,
        ],
      ],
      "confident": 0.3348798264473036,
      "text": "0 .",
    },
    {
      "boxes": [
        [
          42,
          374,
        ],
        [
          256,
          374,
        ],
        [
          256,
          398,
        ],
        [
          42,
          398,
        ],
      ],
      "confident": 0.8712231419178825,
      "text": "Persönliche Kennnummer",
    },
    {
      "boxes": [
        [
          561,
          375,
        ],
        [
          775,
          375,
        ],
        [
          775,
          395,
        ],
        [
          561,
          395,
        ],
      ],
      "confident": 0.9278303380572647,
      "text": "Kennnummer des Trägers",
    },
    {
      "boxes": [
        [
          42,
          400,
        ],
        [
          264,
          400,
        ],
        [
          264,
          430,
        ],
        [
          42,
          430,
        ],
      ],
      "confident": 0.8139588074960924,
      "text": "756.6290.1234.56",
    },
    {
      "boxes": [
        [
          530,
          402,
        ],
        [
          596,
          402,
        ],
        [
          596,
          430,
        ],
        [
          530,
          430,
        ],
      ],
      "confident": 0.9999883770942688,
      "text": "0194",
    },
    {
      "boxes": [
        [
          613,
          402,
        ],
        [
          767,
          402,
        ],
        [
          767,
          430,
        ],
        [
          613,
          430,
        ],
      ],
      "confident": 0.971768358732933,
      "text": "Sumiswalder",
    },
    {
      "boxes": [
        [
          22,
          430,
        ],
        [
          240,
          430,
        ],
        [
          240,
          454,
        ],
        [
          22,
          454,
        ],
      ],
      "confident": 0.37614930183102746,
      "text": "8. Kennnummer_der Karte",
    },
    {
      "boxes": [
        [
          669,
          433,
        ],
        [
          773,
          433,
        ],
        [
          773,
          449,
        ],
        [
          669,
          449,
        ],
      ],
      "confident": 0.7852095747970923,
      "text": "Ablautdatum",
    },
    {
      "boxes": [
        [
          42,
          454,
        ],
        [
          342,
          454,
        ],
        [
          342,
          486,
        ],
        [
          42,
          486,
        ],
      ],
      "confident": 0.9999980007969674,
      "text": "12345601940001234567",
    },
    {
      "boxes": [
        [
          628,
          458,
        ],
        [
          768,
          458,
        ],
        [
          768,
          488,
        ],
        [
          628,
          488,
        ],
      ],
      "confident": 0.9999925736183721,
      "text": "31/12/2021",
    },
  ],
}
`;

exports[`easyocr arch: arm64 should ocr and detect from sympany sample: snapshots/sympany.json 1`] = `
{
  "imageSize": {
    "height": 290,
    "width": 450,
  },
  "results": [
    {
      "boxes": [
        [
          91,
          13,
        ],
        [
          360,
          13,
        ],
        [
          360,
          29,
        ],
        [
          91,
          29,
        ],
      ],
      "confident": 0.9752560258126559,
      "text": "EUROPÄISCHE KRANKENVERSICHERUNGSKARTE",
    },
    {
      "boxes": [
        [
          99,
          109,
        ],
        [
          337,
          109,
        ],
        [
          337,
          123,
        ],
        [
          99,
          123,
        ],
      ],
      "confident": 0.8552240345752357,
      "text": "Medizinischer Notfall im Ausland (24h)",
    },
    {
      "boxes": [
        [
          395,
          115,
        ],
        [
          413,
          115,
        ],
        [
          413,
          129,
        ],
        [
          395,
          129,
        ],
      ],
      "confident": 0.6800507319173398,
      "text": "CH",
    },
    {
      "boxes": [
        [
          99,
          123,
        ],
        [
          201,
          123,
        ],
        [
          201,
          137,
        ],
        [
          99,
          137,
        ],
      ],
      "confident": 0.6853114222790712,
      "text": "+4141480 44 22",
    },
    {
      "boxes": [
        [
          24,
          152,
        ],
        [
          50,
          152,
        ],
        [
          50,
          160,
        ],
        [
          24,
          160,
        ],
      ],
      "confident": 0.2035977691411972,
      "text": "NaMc",
    },
    {
      "boxes": [
        [
          21,
          167,
        ],
        [
          99,
          167,
        ],
        [
          99,
          179,
        ],
        [
          21,
          179,
        ],
      ],
      "confident": 0.9076182599901473,
      "text": "MUSTERMANN",
    },
    {
      "boxes": [
        [
          26,
          184,
        ],
        [
          68,
          184,
        ],
        [
          68,
          192,
        ],
        [
          26,
          192,
        ],
      ],
      "confident": 0.18454794346968256,
      "text": "oroamci",
    },
    {
      "boxes": [
        [
          374,
          184,
        ],
        [
          434,
          184,
        ],
        [
          434,
          192,
        ],
        [
          374,
          192,
        ],
      ],
      "confident": 0.067731119617856,
      "text": "Gcoursdatun",
    },
    {
      "boxes": [
        [
          21,
          199,
        ],
        [
          53,
          199,
        ],
        [
          53,
          211,
        ],
        [
          21,
          211,
        ],
      ],
      "confident": 0.995092511177063,
      "text": "HANS",
    },
    {
      "boxes": [
        [
          373,
          199,
        ],
        [
          431,
          199,
        ],
        [
          431,
          211,
        ],
        [
          373,
          211,
        ],
      ],
      "confident": 0.9995056044434282,
      "text": "08/10/1964",
    },
    {
      "boxes": [
        [
          26,
          216,
        ],
        [
          70,
          216,
        ],
        [
          70,
          224,
        ],
        [
          26,
          224,
        ],
      ],
      "confident": 0.3061729991966077,
      "text": "PcrsSnlich",
    },
    {
      "boxes": [
        [
          328,
          218,
        ],
        [
          356,
          218,
        ],
        [
          356,
          224,
        ],
        [
          328,
          224,
        ],
      ],
      "confident": 0.20119167058205936,
      "text": "oi",
    },
    {
      "boxes": [
        [
          386,
          218,
        ],
        [
          434,
          218,
        ],
        [
          434,
          224,
        ],
        [
          386,
          224,
        ],
      ],
      "confident": 0.009262767674286566,
      "text": "ire",
    },
    {
      "boxes": [
        [
          19,
          231,
        ],
        [
          107,
          231,
        ],
        [
          107,
          245,
        ],
        [
          19,
          245,
        ],
      ],
      "confident": 0.8615452852128794,
      "text": "756.1234.1234.56",
    },
    {
      "boxes": [
        [
          315,
          231,
        ],
        [
          345,
          231,
        ],
        [
          345,
          245,
        ],
        [
          315,
          245,
        ],
      ],
      "confident": 0.974667101511744,
      "text": "0509",
    },
    {
      "boxes": [
        [
          353,
          231,
        ],
        [
          433,
          231,
        ],
        [
          433,
          245,
        ],
        [
          353,
          245,
        ],
      ],
      "confident": 0.9960628057101099,
      "text": "Vivao Sympany",
    },
    {
      "boxes": [
        [
          26,
          250,
        ],
        [
          64,
          250,
        ],
        [
          64,
          258,
        ],
        [
          26,
          258,
        ],
      ],
      "confident": 0.12760026458692128,
      "text": "Kcninun",
    },
    {
      "boxes": [
        [
          84,
          250,
        ],
        [
          122,
          250,
        ],
        [
          122,
          258,
        ],
        [
          84,
          258,
        ],
      ],
      "confident": 0.0250555900126638,
      "text": "Ccikang",
    },
    {
      "boxes": [
        [
          380,
          250,
        ],
        [
          434,
          250,
        ],
        [
          434,
          258,
        ],
        [
          380,
          258,
        ],
      ],
      "confident": 0.09624033078210477,
      "text": "Acuioatun",
    },
    {
      "boxes": [
        [
          21,
          262,
        ],
        [
          144,
          262,
        ],
        [
          144,
          276,
        ],
        [
          21,
          276,
        ],
      ],
      "confident": 0.9976702041074713,
      "text": "80756005090012312345",
    },
    {
      "boxes": [
        [
          373,
          263,
        ],
        [
          433,
          263,
        ],
        [
          433,
          277,
        ],
        [
          373,
          277,
        ],
      ],
      "confident": 0.9999081292582885,
      "text": "31/03/2025",
    },
  ],
}
`;

exports[`easyocr arch: arm64 should ocr and detect from sympany sample with increased batch_size: snapshots/sympany_batch_size.json 1`] = `
{
  "imageSize": {
    "height": 290,
    "width": 450,
  },
  "results": [
    {
      "boxes": [
        [
          91,
          13,
        ],
        [
          360,
          13,
        ],
        [
          360,
          29,
        ],
        [
          91,
          29,
        ],
      ],
      "confident": 0.9752559850647256,
      "text": "EUROPÄISCHE KRANKENVERSICHERUNGSKARTE",
    },
    {
      "boxes": [
        [
          99,
          109,
        ],
        [
          337,
          109,
        ],
        [
          337,
          123,
        ],
        [
          99,
          123,
        ],
      ],
      "confident": 0.8552239301244552,
      "text": "Medizinischer Notfall im Ausland (24h)",
    },
    {
      "boxes": [
        [
          395,
          115,
        ],
        [
          413,
          115,
        ],
        [
          413,
          129,
        ],
        [
          395,
          129,
        ],
      ],
      "confident": 0.68035831922509,
      "text": "CH",
    },
    {
      "boxes": [
        [
          99,
          123,
        ],
        [
          201,
          123,
        ],
        [
          201,
          137,
        ],
        [
          99,
          137,
        ],
      ],
      "confident": 0.6852862256142783,
      "text": "+4141480 44 22",
    },
    {
      "boxes": [
        [
          24,
          152,
        ],
        [
          50,
          152,
        ],
        [
          50,
          160,
        ],
        [
          24,
          160,
        ],
      ],
      "confident": 0.20238256454467773,
      "text": "NaMc",
    },
    {
      "boxes": [
        [
          21,
          167,
        ],
        [
          99,
          167,
        ],
        [
          99,
          179,
        ],
        [
          21,
          179,
        ],
      ],
      "confident": 0.9074742004770245,
      "text": "MUSTERMANN",
    },
    {
      "boxes": [
        [
          26,
          184,
        ],
        [
          68,
          184,
        ],
        [
          68,
          192,
        ],
        [
          26,
          192,
        ],
      ],
      "confident": 0.18730929857288536,
      "text": "oroamci",
    },
    {
      "boxes": [
        [
          374,
          184,
        ],
        [
          434,
          184,
        ],
        [
          434,
          192,
        ],
        [
          374,
          192,
        ],
      ],
      "confident": 0.0688624342092456,
      "text": "Gcoursdatun",
    },
    {
      "boxes": [
        [
          21,
          199,
        ],
        [
          53,
          199,
        ],
        [
          53,
          211,
        ],
        [
          21,
          211,
        ],
      ],
      "confident": 0.9950966835021973,
      "text": "HANS",
    },
    {
      "boxes": [
        [
          373,
          199,
        ],
        [
          431,
          199,
        ],
        [
          431,
          211,
        ],
        [
          373,
          211,
        ],
      ],
      "confident": 0.9994973840530873,
      "text": "08/10/1964",
    },
    {
      "boxes": [
        [
          26,
          216,
        ],
        [
          70,
          216,
        ],
        [
          70,
          224,
        ],
        [
          26,
          224,
        ],
      ],
      "confident": 0.30364163086912543,
      "text": "PcrsSnlich",
    },
    {
      "boxes": [
        [
          328,
          218,
        ],
        [
          356,
          218,
        ],
        [
          356,
          224,
        ],
        [
          328,
          224,
        ],
      ],
      "confident": 0.19635159453449,
      "text": "oi",
    },
    {
      "boxes": [
        [
          386,
          218,
        ],
        [
          434,
          218,
        ],
        [
          434,
          224,
        ],
        [
          386,
          224,
        ],
      ],
      "confident": 0.005341704898150194,
      "text": "Qcsuinrc",
    },
    {
      "boxes": [
        [
          19,
          231,
        ],
        [
          107,
          231,
        ],
        [
          107,
          245,
        ],
        [
          19,
          245,
        ],
      ],
      "confident": 0.8616477018759795,
      "text": "756.1234.1234.56",
    },
    {
      "boxes": [
        [
          315,
          231,
        ],
        [
          345,
          231,
        ],
        [
          345,
          245,
        ],
        [
          315,
          245,
        ],
      ],
      "confident": 0.975874396506678,
      "text": "0509",
    },
    {
      "boxes": [
        [
          353,
          231,
        ],
        [
          433,
          231,
        ],
        [
          433,
          245,
        ],
        [
          353,
          245,
        ],
      ],
      "confident": 0.9961308031612346,
      "text": "Vivao Sympany",
    },
    {
      "boxes": [
        [
          26,
          250,
        ],
        [
          64,
          250,
        ],
        [
          64,
          258,
        ],
        [
          26,
          258,
        ],
      ],
      "confident": 0.13445249244628718,
      "text": "Kcninun",
    },
    {
      "boxes": [
        [
          84,
          250,
        ],
        [
          122,
          250,
        ],
        [
          122,
          258,
        ],
        [
          84,
          258,
        ],
      ],
      "confident": 0.02222723839498213,
      "text": "Ccikang",
    },
    {
      "boxes": [
        [
          380,
          250,
        ],
        [
          434,
          250,
        ],
        [
          434,
          258,
        ],
        [
          380,
          258,
        ],
      ],
      "confident": 0.09887415320033897,
      "text": "Acuioatun",
    },
    {
      "boxes": [
        [
          21,
          262,
        ],
        [
          144,
          262,
        ],
        [
          144,
          276,
        ],
        [
          21,
          276,
        ],
      ],
      "confident": 0.7505368638042289,
      "text": "80756005090012312345",
    },
    {
      "boxes": [
        [
          373,
          263,
        ],
        [
          433,
          263,
        ],
        [
          433,
          277,
        ],
        [
          373,
          277,
        ],
      ],
      "confident": 0.9999077522652461,
      "text": "31/03/2025",
    },
  ],
}
`;

exports[`easyocr arch: arm64 should ocr and detect from sympany sample with increased worker: snapshots/sympany_worker.json 1`] = `
{
  "imageSize": {
    "height": 290,
    "width": 450,
  },
  "results": [
    {
      "boxes": [
        [
          91,
          13,
        ],
        [
          360,
          13,
        ],
        [
          360,
          29,
        ],
        [
          91,
          29,
        ],
      ],
      "confident": 0.9752560258126559,
      "text": "EUROPÄISCHE KRANKENVERSICHERUNGSKARTE",
    },
    {
      "boxes": [
        [
          99,
          109,
        ],
        [
          337,
          109,
        ],
        [
          337,
          123,
        ],
        [
          99,
          123,
        ],
      ],
      "confident": 0.8552240345752357,
      "text": "Medizinischer Notfall im Ausland (24h)",
    },
    {
      "boxes": [
        [
          395,
          115,
        ],
        [
          413,
          115,
        ],
        [
          413,
          129,
        ],
        [
          395,
          129,
        ],
      ],
      "confident": 0.6800507319173398,
      "text": "CH",
    },
    {
      "boxes": [
        [
          99,
          123,
        ],
        [
          201,
          123,
        ],
        [
          201,
          137,
        ],
        [
          99,
          137,
        ],
      ],
      "confident": 0.6853114222790712,
      "text": "+4141480 44 22",
    },
    {
      "boxes": [
        [
          24,
          152,
        ],
        [
          50,
          152,
        ],
        [
          50,
          160,
        ],
        [
          24,
          160,
        ],
      ],
      "confident": 0.2035977691411972,
      "text": "NaMc",
    },
    {
      "boxes": [
        [
          21,
          167,
        ],
        [
          99,
          167,
        ],
        [
          99,
          179,
        ],
        [
          21,
          179,
        ],
      ],
      "confident": 0.9076182599901473,
      "text": "MUSTERMANN",
    },
    {
      "boxes": [
        [
          26,
          184,
        ],
        [
          68,
          184,
        ],
        [
          68,
          192,
        ],
        [
          26,
          192,
        ],
      ],
      "confident": 0.18454794346968256,
      "text": "oroamci",
    },
    {
      "boxes": [
        [
          374,
          184,
        ],
        [
          434,
          184,
        ],
        [
          434,
          192,
        ],
        [
          374,
          192,
        ],
      ],
      "confident": 0.067731119617856,
      "text": "Gcoursdatun",
    },
    {
      "boxes": [
        [
          21,
          199,
        ],
        [
          53,
          199,
        ],
        [
          53,
          211,
        ],
        [
          21,
          211,
        ],
      ],
      "confident": 0.995092511177063,
      "text": "HANS",
    },
    {
      "boxes": [
        [
          373,
          199,
        ],
        [
          431,
          199,
        ],
        [
          431,
          211,
        ],
        [
          373,
          211,
        ],
      ],
      "confident": 0.9995056044434282,
      "text": "08/10/1964",
    },
    {
      "boxes": [
        [
          26,
          216,
        ],
        [
          70,
          216,
        ],
        [
          70,
          224,
        ],
        [
          26,
          224,
        ],
      ],
      "confident": 0.3061729991966077,
      "text": "PcrsSnlich",
    },
    {
      "boxes": [
        [
          328,
          218,
        ],
        [
          356,
          218,
        ],
        [
          356,
          224,
        ],
        [
          328,
          224,
        ],
      ],
      "confident": 0.20119167058205936,
      "text": "oi",
    },
    {
      "boxes": [
        [
          386,
          218,
        ],
        [
          434,
          218,
        ],
        [
          434,
          224,
        ],
        [
          386,
          224,
        ],
      ],
      "confident": 0.009262767674286566,
      "text": "ire",
    },
    {
      "boxes": [
        [
          19,
          231,
        ],
        [
          107,
          231,
        ],
        [
          107,
          245,
        ],
        [
          19,
          245,
        ],
      ],
      "confident": 0.8615452852128794,
      "text": "756.1234.1234.56",
    },
    {
      "boxes": [
        [
          315,
          231,
        ],
        [
          345,
          231,
        ],
        [
          345,
          245,
        ],
        [
          315,
          245,
        ],
      ],
      "confident": 0.974667101511744,
      "text": "0509",
    },
    {
      "boxes": [
        [
          353,
          231,
        ],
        [
          433,
          231,
        ],
        [
          433,
          245,
        ],
        [
          353,
          245,
        ],
      ],
      "confident": 0.9960628057101099,
      "text": "Vivao Sympany",
    },
    {
      "boxes": [
        [
          26,
          250,
        ],
        [
          64,
          250,
        ],
        [
          64,
          258,
        ],
        [
          26,
          258,
        ],
      ],
      "confident": 0.12760026458692128,
      "text": "Kcninun",
    },
    {
      "boxes": [
        [
          84,
          250,
        ],
        [
          122,
          250,
        ],
        [
          122,
          258,
        ],
        [
          84,
          258,
        ],
      ],
      "confident": 0.0250555900126638,
      "text": "Ccikang",
    },
    {
      "boxes": [
        [
          380,
          250,
        ],
        [
          434,
          250,
        ],
        [
          434,
          258,
        ],
        [
          380,
          258,
        ],
      ],
      "confident": 0.09624033078210477,
      "text": "Acuioatun",
    },
    {
      "boxes": [
        [
          21,
          262,
        ],
        [
          144,
          262,
        ],
        [
          144,
          276,
        ],
        [
          21,
          276,
        ],
      ],
      "confident": 0.9976702041074713,
      "text": "80756005090012312345",
    },
    {
      "boxes": [
        [
          373,
          263,
        ],
        [
          433,
          263,
        ],
        [
          433,
          277,
        ],
        [
          373,
          277,
        ],
      ],
      "confident": 0.9999081292582885,
      "text": "31/03/2025",
    },
  ],
}
`;

exports[`easyocr arch: arm64 should ocr and detect from visana sample: snapshots/visana.json 1`] = `
{
  "imageSize": {
    "height": 265,
    "width": 410,
  },
  "results": [
    {
      "boxes": [
        [
          83,
          15,
        ],
        [
          320,
          15,
        ],
        [
          320,
          27,
        ],
        [
          83,
          27,
        ],
      ],
      "confident": 0.8701379430773742,
      "text": "EUROPAISCHE KRANKENVERSICHERUNGSKARTE",
    },
    {
      "boxes": [
        [
          89,
          89,
        ],
        [
          313,
          89,
        ],
        [
          313,
          109,
        ],
        [
          89,
          109,
        ],
      ],
      "confident": 0.9366998812107933,
      "text": "Bei Notfällen im Ausland (24h)",
    },
    {
      "boxes": [
        [
          129,
          107,
        ],
        [
          277,
          107,
        ],
        [
          277,
          125,
        ],
        [
          129,
          125,
        ],
      ],
      "confident": 0.9942844652418125,
      "text": "+41 (0)848 848 855",
    },
    {
      "boxes": [
        [
          19,
          147,
        ],
        [
          79,
          147,
        ],
        [
          79,
          161,
        ],
        [
          19,
          161,
        ],
      ],
      "confident": 0.9090303784483359,
      "text": "HUSTER",
    },
    {
      "boxes": [
        [
          19,
          173,
        ],
        [
          121,
          173,
        ],
        [
          121,
          189,
        ],
        [
          19,
          189,
        ],
      ],
      "confident": 0.9815077444286118,
      "text": "MARIA-LUISA",
    },
    {
      "boxes": [
        [
          301,
          173,
        ],
        [
          383,
          173,
        ],
        [
          383,
          189,
        ],
        [
          301,
          189,
        ],
      ],
      "confident": 0.9991093595533569,
      "text": "25.09.1980",
    },
    {
      "boxes": [
        [
          21,
          199,
        ],
        [
          149,
          199,
        ],
        [
          149,
          217,
        ],
        [
          21,
          217,
        ],
      ],
      "confident": 0.8718064076538862,
      "text": "756.3047.5009.62",
    },
    {
      "boxes": [
        [
          257,
          201,
        ],
        [
          303,
          201,
        ],
        [
          303,
          217,
        ],
        [
          257,
          217,
        ],
      ],
      "confident": 0.907953616567272,
      "text": "01555",
    },
    {
      "boxes": [
        [
          324,
          199,
        ],
        [
          383,
          199,
        ],
        [
          383,
          218,
        ],
        [
          324,
          218,
        ],
      ],
      "confident": 0.9864397183869971,
      "text": "Visana",
    },
    {
      "boxes": [
        [
          21,
          227,
        ],
        [
          173,
          227,
        ],
        [
          173,
          243,
        ],
        [
          21,
          243,
        ],
      ],
      "confident": 0.9629516814968528,
      "text": "807560156202452130",
    },
    {
      "boxes": [
        [
          299,
          227,
        ],
        [
          383,
          227,
        ],
        [
          383,
          243,
        ],
        [
          299,
          243,
        ],
      ],
      "confident": 0.9850508326363158,
      "text": "31.12.2018",
    },
  ],
}
`;

exports[`easyocr arch: arm64 should ocr and detect from visana sample with increased batch_size: snapshots/visana_batch_size.json 1`] = `
{
  "imageSize": {
    "height": 265,
    "width": 410,
  },
  "results": [
    {
      "boxes": [
        [
          83,
          15,
        ],
        [
          320,
          15,
        ],
        [
          320,
          27,
        ],
        [
          83,
          27,
        ],
      ],
      "confident": 0.8701379430773742,
      "text": "EUROPAISCHE KRANKENVERSICHERUNGSKARTE",
    },
    {
      "boxes": [
        [
          89,
          89,
        ],
        [
          313,
          89,
        ],
        [
          313,
          109,
        ],
        [
          89,
          109,
        ],
      ],
      "confident": 0.9367406668176106,
      "text": "Bei Notfällen im Ausland (24h)",
    },
    {
      "boxes": [
        [
          129,
          107,
        ],
        [
          277,
          107,
        ],
        [
          277,
          125,
        ],
        [
          129,
          125,
        ],
      ],
      "confident": 0.9942817397240137,
      "text": "+41 (0)848 848 855",
    },
    {
      "boxes": [
        [
          19,
          147,
        ],
        [
          79,
          147,
        ],
        [
          79,
          161,
        ],
        [
          19,
          161,
        ],
      ],
      "confident": 0.90855889219497,
      "text": "HUSTER",
    },
    {
      "boxes": [
        [
          19,
          173,
        ],
        [
          121,
          173,
        ],
        [
          121,
          189,
        ],
        [
          19,
          189,
        ],
      ],
      "confident": 0.981488242900471,
      "text": "MARIA-LUISA",
    },
    {
      "boxes": [
        [
          301,
          173,
        ],
        [
          383,
          173,
        ],
        [
          383,
          189,
        ],
        [
          301,
          189,
        ],
      ],
      "confident": 0.9991110568090884,
      "text": "25.09.1980",
    },
    {
      "boxes": [
        [
          21,
          199,
        ],
        [
          149,
          199,
        ],
        [
          149,
          217,
        ],
        [
          21,
          217,
        ],
      ],
      "confident": 0.8720444690340341,
      "text": "756.3047.5009.62",
    },
    {
      "boxes": [
        [
          324,
          199,
        ],
        [
          383,
          199,
        ],
        [
          383,
          218,
        ],
        [
          324,
          218,
        ],
      ],
      "confident": 0.9864516296091587,
      "text": "Visana",
    },
    {
      "boxes": [
        [
          257,
          201,
        ],
        [
          303,
          201,
        ],
        [
          303,
          217,
        ],
        [
          257,
          217,
        ],
      ],
      "confident": 0.9462994690857591,
      "text": "01555",
    },
    {
      "boxes": [
        [
          21,
          227,
        ],
        [
          173,
          227,
        ],
        [
          173,
          243,
        ],
        [
          21,
          243,
        ],
      ],
      "confident": 0.8689991114180996,
      "text": "807560156202452130",
    },
    {
      "boxes": [
        [
          299,
          227,
        ],
        [
          383,
          227,
        ],
        [
          383,
          243,
        ],
        [
          299,
          243,
        ],
      ],
      "confident": 0.9850580961034094,
      "text": "31.12.2018",
    },
  ],
}
`;

exports[`easyocr arch: arm64 should ocr and detect from visana sample with increased worker: snapshots/visana_worker.json 1`] = `
{
  "imageSize": {
    "height": 265,
    "width": 410,
  },
  "results": [
    {
      "boxes": [
        [
          83,
          15,
        ],
        [
          320,
          15,
        ],
        [
          320,
          27,
        ],
        [
          83,
          27,
        ],
      ],
      "confident": 0.8701379430773742,
      "text": "EUROPAISCHE KRANKENVERSICHERUNGSKARTE",
    },
    {
      "boxes": [
        [
          89,
          89,
        ],
        [
          313,
          89,
        ],
        [
          313,
          109,
        ],
        [
          89,
          109,
        ],
      ],
      "confident": 0.9366998812107933,
      "text": "Bei Notfällen im Ausland (24h)",
    },
    {
      "boxes": [
        [
          129,
          107,
        ],
        [
          277,
          107,
        ],
        [
          277,
          125,
        ],
        [
          129,
          125,
        ],
      ],
      "confident": 0.9942844652418125,
      "text": "+41 (0)848 848 855",
    },
    {
      "boxes": [
        [
          19,
          147,
        ],
        [
          79,
          147,
        ],
        [
          79,
          161,
        ],
        [
          19,
          161,
        ],
      ],
      "confident": 0.9090303784483359,
      "text": "HUSTER",
    },
    {
      "boxes": [
        [
          19,
          173,
        ],
        [
          121,
          173,
        ],
        [
          121,
          189,
        ],
        [
          19,
          189,
        ],
      ],
      "confident": 0.9815077444286118,
      "text": "MARIA-LUISA",
    },
    {
      "boxes": [
        [
          301,
          173,
        ],
        [
          383,
          173,
        ],
        [
          383,
          189,
        ],
        [
          301,
          189,
        ],
      ],
      "confident": 0.9991093595533569,
      "text": "25.09.1980",
    },
    {
      "boxes": [
        [
          21,
          199,
        ],
        [
          149,
          199,
        ],
        [
          149,
          217,
        ],
        [
          21,
          217,
        ],
      ],
      "confident": 0.8718064076538862,
      "text": "756.3047.5009.62",
    },
    {
      "boxes": [
        [
          257,
          201,
        ],
        [
          303,
          201,
        ],
        [
          303,
          217,
        ],
        [
          257,
          217,
        ],
      ],
      "confident": 0.907953616567272,
      "text": "01555",
    },
    {
      "boxes": [
        [
          324,
          199,
        ],
        [
          383,
          199,
        ],
        [
          383,
          218,
        ],
        [
          324,
          218,
        ],
      ],
      "confident": 0.9864397183869971,
      "text": "Visana",
    },
    {
      "boxes": [
        [
          21,
          227,
        ],
        [
          173,
          227,
        ],
        [
          173,
          243,
        ],
        [
          21,
          243,
        ],
      ],
      "confident": 0.9629516814968528,
      "text": "807560156202452130",
    },
    {
      "boxes": [
        [
          299,
          227,
        ],
        [
          383,
          227,
        ],
        [
          383,
          243,
        ],
        [
          299,
          243,
        ],
      ],
      "confident": 0.9850508326363158,
      "text": "31.12.2018",
    },
  ],
}
`;
